# worldexplorer

./: .gitignore  AUTOMATION.md  GITHUB_PUBLISH_STATUS.md  IDEAS.md  IDEAS_ZOO.md  LICENSE  PUBLISH.md  README.md  REFACTOR_NOTES.md  RESEARCH_AGENT_BRIEF.md  SOURCE_OF_TRUTH.md  WORLDEXPLORER_SYSTEM.md  pyproject.toml  split_module.py  sync_engine.py
engine_src/: 00_preamble.py  01_configuration.py  02_logging_io.py  03_metabolism.py  04_core_math.py  05_data_discovery_synthetic_f.py  06_viewports.py  06_viewports__00.py  06_viewports__01.py  06_viewports__02.py  07_skills.py  07_skills__00.py  07_skills__01.py  07_skills__02.py  08_lessons.py  09_phase_1.py  10_phase_2.py  11_predator_persona.py  12_topography_reports.py  12_topography_reports__00.py  12_topography_reports__01.py  13_ensemble.py  13_ensemble__00.py  13_ensemble__01.py  14_harness_orchestration.py  15_v21_forensic_regime_scienc.py  15_v21_forensic_regime_scienc__00.py  15_v21_forensic_regime_scienc__01.py  15_v21_forensic_regime_scienc__02.py  16_harness.py  17_main.py
examples/: kaggle_drw.py  quickstart.py
kaggle/: bootstrap_kernel.py
tests/: test_adapter_kaggle.py  test_fleet_revival.py  test_memory_guardrails.py  test_telemetry_guidance.py
tools/: advisor_stub.py  blend.py  check_equivalence.py  check_units.py  fleet.py  ingest_run.py  make_kaggle_kernel.py  memory_matrices.py  method_object_rewrite.py  publish.py  route_carve.py  smoke_v28.py  smoke_v29.py  smoke_v30.py  smoke_v31.py  smoke_v32.py  smoke_v33.py  smoke_v34.py  smoke_v35.py  smoke_v36.py  source_audit.py  split_run_phases.py  (+3 more)
(+6 files in other folders)
